--- a/index.html
+++ b/index.html
@@ -1462,17 +1462,18 @@
                                                     <a href="https://www.facebook.com/profile.php?id=100090832025591&ref=xav_ig_profile_web"
                                                         class="footer-social-link" target="_blank">
                                                         <img src="./assets/facebook.webp" loading="lazy"
-                                                            alt="Facebook Icon" class="icon-1x1-small" />
+                                                            alt="Facebook Icon" class="icon-1x1-small icon-redes" />
                                                     </a>
                                                     <a href="https://www.instagram.com/gutierrezgaux"
                                                         class="footer-social-link" target="_blank">
                                                         <img src="./assets/instagram.webp" loading="lazy"
                                                             alt="Instagram Icon" width="24px" height="24px"
-                                                            class="icon-1x1-small" />
+                                                            class="icon-1x1-small icon-redes" />
                                                     </a>
                                                     <a href="#" class="footer-social-link" target="_blank">
                                                         <img src="./assets/linkedin.webp" loading="lazy" width="24px"
-                                                            height="24px" alt="LinkedIn Icon" class="icon-1x1-small" />
+                                                            height="24px" alt="LinkedIn Icon"
+                                                            class="icon-1x1-small icon-redes" />
                                                     </a>
                                                 </div>
                                             </div>
@@ -1489,17 +1490,18 @@
                                                     <a href="https://www.facebook.com/dentalidcuu/"
                                                         class="footer-social-link" target="_blank">
                                                         <img src="./assets/facebook.webp" loading="lazy"
-                                                            alt="Facebook Icon" class="icon-1x1-small" />
+                                                            alt="Facebook Icon" class="icon-1x1-small icon-redes" />
                                                     </a>
                                                     <a href="https://www.instagram.com/dentalid.depositodental/?hl=es-la"
                                                         class="footer-social-link" target="_blank">
                                                         <img src="./assets/instagram.webp" loading="lazy"
                                                             alt="Instagram Icon" width="24px" height="24px"
-                                                            class="icon-1x1-small" />
+                                                            class="icon-1x1-small icon-redes" />
                                                     </a>
                                                     <a href="#" class="footer-social-link" target="_blank">
                                                         <img src="./assets/linkedin.webp" loading="lazy" width="24px"
-                                                            height="24px" alt="LinkedIn Icon" class="icon-1x1-small" />
+                                                            height="24px" alt="LinkedIn Icon"
+                                                            class="icon-1x1-small icon-redes" />
                                                     </a>
                                                 </div>
                                             </div>
@@ -1515,18 +1517,19 @@
                                                     <a href="https://www.facebook.com/ZeycoMx/"
                                                         class="footer-social-link" target="_blank">
                                                         <img src="./assets/facebook.webp" loading="lazy"
-                                                            alt="Facebook Icon" class="icon-1x1-small" />
+                                                            alt="Facebook Icon" class="icon-1x1-small icon-redes" />
                                                     </a>
                                                     <a href="https://www.instagram.com/zeycomx/"
                                                         class="footer-social-link" target="_blank">
                                                         <img src="./assets/instagram.webp" loading="lazy"
                                                             alt="Instagram Icon" width="24px" height="24px"
-                                                            class="icon-1x1-small" />
+                                                            class="icon-1x1-small icon-redes" />
                                                     </a>
                                                     <a href="https://www.linkedin.com/company/zeyco/"
                                                         class="footer-social-link" target="_blank">
                                                         <img src="./assets/linkedin.webp" loading="lazy" width="24px"
-                                                            height="24px" alt="LinkedIn Icon" class="icon-1x1-small" />
+                                                            height="24px" alt="LinkedIn Icon"
+                                                            class="icon-1x1-small icon-redes" />
                                                     </a>
                                                 </div>
                                             </div>
