--- a/index.html
+++ b/index.html
@@ -728,6 +728,7 @@
                                                         </p>
                                                         <div class="redes-c ">
                                                             <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8c96-547d8c7d"
+                                                                class="d-flex justify-content-center redes-c-gap"
                                                                 class="w-layout-grid footer-social-list">
                                                                 <a href="https://www.facebook.com/profile.php?id=100009749049911"
                                                                     class="footer-social-link w-inline-block"
@@ -752,6 +753,7 @@
                                                             </div>
 
                                                         </div>
+
                                                     </div>
 
                                                 </div>
