Cambios header y hero

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <div class="menuhamburger w-100 d-flex justify-content-center align-items-center">
                         <div class="logo d-flex justify-content-center justify-content-md-center mx-auto">
                             <a href="index.html" aria-current="page" class="navbar-logo-link w-nav-brand w--current">
-                                <img src="./assets/¿.webp" loading="lazy" alt="Logo" class="navbar-logo" />
+                                <h3 class ="navbar-logo">CODEC</h3>
                             </a>
                         </div>
                         <div class="botonNav">
@@ -402,15 +402,14 @@
                                         <div class="text-align-center w-100">
                                             <div class="">
                                                 <div class="margin-bottom margin-xsmall header-titulo-mov">
-                                                    <div class="subheading">Congreso Dental Chihuahuense </div>
                                                 </div>
                                                 <div class="margin-bottom margin-small my-5">
                                                     <h1 class="codec-titulo">CODEC</h1>
-                                                    <h3 class="frase-codec">Sunt ea sint esse Lorem eu ut commodo ad.
+                                                    <h3 class="frase-codec">Congreso dental Chihuahuense
                                                     </h3>
                                                 </div>
                                                 <div class=" header-infos-wrapper justify-content-md-between mt-5">
-                                                    <div class="header-infos-item">
+                                                    <div class="header-infos-iteml">
                                                         <div>3 y 4 de Octubre 2024</div>
                                                     </div>
                                                     <div class="header-infos-item">
@@ -536,7 +535,7 @@
                                 </div>
                                 <div class="speaker-collection-wrapper w-dyn-list">
                                     <div class="mobile-notice">
-                                        Presiona la imagen para ver la información.
+                                        Presionagit la imagen para ver la información.
                                     </div>
                                     <div role="list" class="speaker-collection-list w-dyn-items">
                                         <div role="listitem" class="speaker-collection-item w-dyn-item">
@@ -1845,7 +1844,7 @@
                                 <div class="footer-top-wrapper">
                                     <div class="logo-footer">
                                         <a href="" aria-current="page" class="navbar-logo-link w-nav-brand w--current">
-                                            <img src="./assets/.webp" loading="lazy" alt="Logo" class="navbar-logo" />
+                                            <h3 class="navbar-logo">CODEC</h3>
                                         </a>
                                     </div>
 
