Cambios itinerario móvil

--- a/index.html
+++ b/index.html
@@ -1040,9 +1040,7 @@
                                             <div class="agenda-background-overlay"></div>
                                         </div>
                                     </div>
-                                    <div class="mobile-notice">
-                                        Presiona sobre el itinerario para ver la información.
-                                    </div>
+                                    
                                     <div class="agenda-list">
                                         <h1 class="text-center text-md-start">Día 1</h1>
                                         <div class="agenda-item">
@@ -1066,6 +1064,9 @@
                                                 class="agenda-content">
                                                 <div class="margin-bottom ">
                                                     <h3>Conferencia #1</h3>
+                                                    <div id = "arrow" class="mobile-notice">
+                                                        &rarr;
+                                                    </div>
                                                 </div>
                                             </div>
                                             <div class="additional-info">
@@ -1096,6 +1097,9 @@
                                                 <div class="margin-bottom ">
                                                     <h3>Remodelación de la Estética Rosa, Cirugía Plástica Periodontal
                                                     </h3>
+                                                    <div id = "arrow" class="mobile-notice">
+                                                        &rarr;
+                                                    </div>
                                                 </div>
                                             </div>
                                             <div class="additional-info">
@@ -1130,6 +1134,9 @@
                                                 class="agenda-content">
                                                 <div class="margin-bottom ">
                                                     <h3>Comunicándonos Para un Mejor Resultado</h3>
+                                                    <div id = "arrow" class="mobile-notice">
+                                                        &rarr;
+                                                    </div>
                                                 </div>
                                             </div>
                                             <div class="additional-info">
@@ -1162,6 +1169,9 @@
                                                 class="agenda-content">
                                                 <div class="margin-bottom ">
                                                     <h3>Restauraciones Bio-miméticas en el Segmento Anterior</h3>
+                                                    <div id = "arrow" class="mobile-notice">
+                                                        &rarr;
+                                                    </div>
                                                 </div>
                                             </div>
                                             <div class="additional-info">
@@ -1198,6 +1208,9 @@
                                                 class="agenda-content">
                                                 <div class="margin-bottom ">
                                                     <h3>Conferencia #1</h3>
+                                                    <div id = "arrow" class="mobile-notice">
+                                                        &rarr;
+                                                    </div>
                                                 </div>
                                             </div>
                                             <div class="additional-info">
@@ -1226,6 +1239,9 @@
                                                 class="agenda-content">
                                                 <div class="margin-bottom ">
                                                     <h3>Neuro Marketing Dental</h3>
+                                                    <div id = "arrow" class="mobile-notice">
+                                                        &rarr;
+                                                    </div>
                                                 </div>
                                             </div>
                                             <div class="additional-info">
@@ -1258,6 +1274,9 @@
                                             <div id="w-node-_7b27f06b-c19d-31f8-9771-1ff04b737f2c-3863c98b"
                                                 class="agenda-content">
                                                 <h3>Integración del Flujo Digital a tu Consulta Diaria</h3>
+                                                <div id = "arrow" class="mobile-notice">
+                                                    &rarr;
+                                                </div>
                                             </div>
                                             <div class="additional-info">
                                                 <p><span class="conferencista-titulo">Conferencista: </span> Dr. Oscar
@@ -1292,6 +1311,9 @@
                                                 class="agenda-content">
                                                 <h3>Transición de Flujo Analógico a Flujo Digital. Curva de Aprendizaje
                                                 </h3>
+                                                <div id = "arrow" class="mobile-notice">
+                                                    &rarr;
+                                                </div>
                                             </div>
                                             <div class="additional-info">
                                                 <p><span class="conferencista-titulo">Conferencista: </span>Dr. Nestor
@@ -1397,6 +1419,13 @@
 
                         h3 {
                             margin: 0;
+                        }
+
+                        #arrow {
+                            display: flex;
+                            align-items: center;
+                            margin-left: auto; /* Asegura que la flecha esté en el extremo derecho */
+                            font-size: 1.5em; /* Ajusta el tamaño de la flecha si es necesario */
                         }
                     </style>
                 </section>
