--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
                                 </div>
                                 <div class="speaker-collection-wrapper w-dyn-list">
                                     <div class="mobile-notice">
-                                        Presionagit la imagen para ver la información.
+                                        Presiona sobre la imagen para ver la información.
                                     </div>
                                     <div role="list" class="speaker-collection-list w-dyn-items">
                                         <div role="listitem" class="speaker-collection-item w-dyn-item">
@@ -1015,7 +1015,7 @@
                             color: #000;
                         }
 
-                        @media (max-width: 767px) {
+                        @media (max-width: 1024px) {
                             .mobile-notice {
                                 display: block;
                             }
@@ -1421,7 +1421,7 @@
                             margin: 0;
                         }
 
-                        @media (max-width: 767px) {
+                        @media (max-width: 1024px) {
                             #arrow {
                                 display: flex;
                                 align-items: center;
