--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <div class="menuhamburger w-100 d-flex justify-content-center align-items-center">
                         <div class="logo d-flex justify-content-center justify-content-md-center mx-auto">
                             <a href="index.html" aria-current="page" class="navbar-logo-link w-nav-brand w--current">
-                                <h3 class ="navbar-logo">CODEC</h3>
+                                <h3 class="navbar-logo">CODEC</h3>
                             </a>
                         </div>
                         <div class="botonNav">
@@ -1040,7 +1040,7 @@
                                             <div class="agenda-background-overlay"></div>
                                         </div>
                                     </div>
-                                    
+
                                     <div class="agenda-list">
                                         <h1 class="text-center text-md-start">Día 1</h1>
                                         <div class="agenda-item">
@@ -1064,7 +1064,7 @@
                                                 class="agenda-content">
                                                 <div class="margin-bottom ">
                                                     <h3>Conferencia #1</h3>
-                                                    <div id = "arrow" class="mobile-notice">
+                                                    <div id="arrow" class="mobile-notice">
                                                         &rarr;
                                                     </div>
                                                 </div>
@@ -1097,7 +1097,7 @@
                                                 <div class="margin-bottom ">
                                                     <h3>Remodelación de la Estética Rosa, Cirugía Plástica Periodontal
                                                     </h3>
-                                                    <div id = "arrow" class="mobile-notice">
+                                                    <div id="arrow" class="mobile-notice">
                                                         &rarr;
                                                     </div>
                                                 </div>
@@ -1134,7 +1134,7 @@
                                                 class="agenda-content">
                                                 <div class="margin-bottom ">
                                                     <h3>Comunicándonos Para un Mejor Resultado</h3>
-                                                    <div id = "arrow" class="mobile-notice">
+                                                    <div id="arrow" class="mobile-notice">
                                                         &rarr;
                                                     </div>
                                                 </div>
@@ -1169,7 +1169,7 @@
                                                 class="agenda-content">
                                                 <div class="margin-bottom ">
                                                     <h3>Restauraciones Bio-miméticas en el Segmento Anterior</h3>
-                                                    <div id = "arrow" class="mobile-notice">
+                                                    <div id="arrow" class="mobile-notice">
                                                         &rarr;
                                                     </div>
                                                 </div>
@@ -1208,7 +1208,7 @@
                                                 class="agenda-content">
                                                 <div class="margin-bottom ">
                                                     <h3>Conferencia #1</h3>
-                                                    <div id = "arrow" class="mobile-notice">
+                                                    <div id="arrow" class="mobile-notice">
                                                         &rarr;
                                                     </div>
                                                 </div>
@@ -1239,7 +1239,7 @@
                                                 class="agenda-content">
                                                 <div class="margin-bottom ">
                                                     <h3>Neuro Marketing Dental</h3>
-                                                    <div id = "arrow" class="mobile-notice">
+                                                    <div id="arrow" class="mobile-notice">
                                                         &rarr;
                                                     </div>
                                                 </div>
@@ -1274,7 +1274,7 @@
                                             <div id="w-node-_7b27f06b-c19d-31f8-9771-1ff04b737f2c-3863c98b"
                                                 class="agenda-content">
                                                 <h3>Integración del Flujo Digital a tu Consulta Diaria</h3>
-                                                <div id = "arrow" class="mobile-notice">
+                                                <div id="arrow" class="mobile-notice">
                                                     &rarr;
                                                 </div>
                                             </div>
@@ -1311,7 +1311,7 @@
                                                 class="agenda-content">
                                                 <h3>Transición de Flujo Analógico a Flujo Digital. Curva de Aprendizaje
                                                 </h3>
-                                                <div id = "arrow" class="mobile-notice">
+                                                <div id="arrow" class="mobile-notice">
                                                     &rarr;
                                                 </div>
                                             </div>
@@ -1425,11 +1425,14 @@
                             #arrow {
                                 display: flex;
                                 align-items: center;
-                                margin-left: auto; /* Asegura que la flecha esté en el extremo derecho */
-                                font-size: 1.5em; /* Ajusta el tamaño de la flecha si es necesario */
+                                margin-left: auto;
+                                /* Asegura que la flecha esté en el extremo derecho */
+                                font-size: 1.5em;
+                                /* Ajusta el tamaño de la flecha si es necesario */
                             }
-                            
+
                         }
+
                         #arrow {
                             display: none;
                         }
