--- a/index.html
+++ b/index.html
@@ -1510,7 +1510,34 @@
 
                                 <div class="organizadores2">
                                     <div class="organizadoresImg2">
-                                        <div class="organizadores-grid py-5 py-lg-0">
+                                        <div class="organizadores-grid py-lg-0">
+                                            <img loading="lazy" src="assets/zeyco_logo.webp" alt="logo">
+                                            <div class="redes-c redes-organizadores">
+                                                <div
+                                                    class="footer-social-list d-flex justify-content-center align-items-center">
+                                                    <a href="https://www.facebook.com/ZeycoMx/"
+                                                        class="footer-social-link" target="_blank">
+                                                        <img src="./assets/facebook.webp" loading="lazy"
+                                                            alt="Facebook Icon" class="icon-1x1-small icon-redes" />
+                                                    </a>
+                                                    <a href="https://www.instagram.com/zeycomx/"
+                                                        class="footer-social-link" target="_blank">
+                                                        <img src="./assets/instagram.webp" loading="lazy"
+                                                            alt="Instagram Icon" width="24px" height="24px"
+                                                            class="icon-1x1-small icon-redes" />
+                                                    </a>
+                                                    <a href="https://www.linkedin.com/company/zeyco/"
+                                                        class="footer-social-link" target="_blank">
+                                                        <img src="./assets/linkedin.webp" loading="lazy" width="24px"
+                                                            height="24px" alt="LinkedIn Icon"
+                                                            class="icon-1x1-small icon-redes" />
+                                                    </a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="organizadoresImg2">
+                                        <div class="organizadores-grid py-lg-0">
                                             <img loading="lazy" src="assets/logo-gaux.webp" alt="logo">
                                             <div class="redes-c redes-organizadores">
                                                 <div
@@ -1538,7 +1565,7 @@
                                     </div>
 
                                     <div class="organizadoresImg2">
-                                        <div class="organizadores-grid py-5 py-lg-0">
+                                        <div class="organizadores-grid py-lg-0">
                                             <img loading="lazy" src="assets/Dentalid LOGO.webp" alt="logo">
                                             <div class="redes-c redes-organizadores">
                                                 <div
@@ -1564,33 +1591,7 @@
                                         </div>
                                     </div>
 
-                                    <div class="organizadoresImg2">
-                                        <div class="organizadores-grid py-5 py-lg-0">
-                                            <img loading="lazy" src="assets/zeyco_logo.webp" alt="logo">
-                                            <div class="redes-c redes-organizadores">
-                                                <div
-                                                    class="footer-social-list d-flex justify-content-center align-items-center">
-                                                    <a href="https://www.facebook.com/ZeycoMx/"
-                                                        class="footer-social-link" target="_blank">
-                                                        <img src="./assets/facebook.webp" loading="lazy"
-                                                            alt="Facebook Icon" class="icon-1x1-small icon-redes" />
-                                                    </a>
-                                                    <a href="https://www.instagram.com/zeycomx/"
-                                                        class="footer-social-link" target="_blank">
-                                                        <img src="./assets/instagram.webp" loading="lazy"
-                                                            alt="Instagram Icon" width="24px" height="24px"
-                                                            class="icon-1x1-small icon-redes" />
-                                                    </a>
-                                                    <a href="https://www.linkedin.com/company/zeyco/"
-                                                        class="footer-social-link" target="_blank">
-                                                        <img src="./assets/linkedin.webp" loading="lazy" width="24px"
-                                                            height="24px" alt="LinkedIn Icon"
-                                                            class="icon-1x1-small icon-redes" />
-                                                    </a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
+
                                 </div>
 
 
