--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <div class="page-wrapper">
 
             <div class="header navbar navbar-expand-lg navbar-light bg-light py-3">
-                <div class="ps-5 pe-2 navegacionF w-100 d-flex align-center">
+                <div class="ps-2 pe-2 navegacionF w-100 d-flex align-center">
                     <div class="menuhamburger w-100 d-flex justify-content-center align-items-center">
                         <div class="logo d-flex justify-content-center justify-content-md-center mx-auto">
                             <a href="index.html" aria-current="page" class="navbar-logo-link w-nav-brand w--current">
@@ -1721,7 +1721,7 @@
                                 </div>
                             </div>
 
-                            <div role="list" class="faq-collection-list w-dyn-items mx-md-5 mt-md-5 px-3">
+                            <div role="list" class="faq-collection-list w-dyn-items mx-md-5 mt-5 px-3">
                                 <div role="listitem" class="faq-collection-item w-dyn-item">
                                     <div class="faq-accordion">
                                         <div class="faq-question">
@@ -1906,10 +1906,10 @@
                 <div class="padding-global">
                     <div class="section-grid">
                         <div class="padding-section-medium section01">
-                            <div class="padding-xlarge">
+                            <div class="d-flex justify-content-start">
                                 <div class="footer-top-wrapper">
-                                    <div class="logo-footer">
-                                        <a href="" aria-current="page" class="navbar-logo-link w-nav-brand w--current">
+                                    <div class="logo-footer my-3">
+                                        <a href="" aria-current="page" class="navbar-logo-link w--current">
                                             <h3 class="navbar-logo">CODEC</h3>
                                         </a>
                                     </div>
