--- a/index.html
+++ b/index.html
@@ -413,8 +413,7 @@
                                                         <div>3 y 4 de Octubre 2024</div>
                                                     </div>
                                                     <div class="header-infos-item">
-                                                        <div class="text-uppercase">CENTRO DE EXPOSICIONES
-                                                            Y CONVENCIONES</div>
+                                                        <div>Centro de exposiciones y convenciones</div>
                                                     </div>
                                                     <div class="header-infos-item  no-border">
                                                         <div>Chihuahua, México</div>
